site/wizard/css/wizard.css
#wrapper.unified {
    width: 1200px;
    min-height: 630px;
    margin: 0 auto;
    /*border: 3px solid #333;*/
}
.wizard-step {
    width: 64px !important;
    height: 64px;
    font-size: 36px !important;
    border-radius: 50%;
    border: 3px solid #666;
    display: inline-block;
    color: #666;
    text-align: center;
    margin-left: 18px;
    margin-top: 0px;
    padding-top: 3px;
    position: relative;
    z-index: 3;
    background: #FFF;
}


.unified .wizard-step {
  margin-left: -10px;
}

.wizard-step-wrapper {
    display: inline-block;
    color: #333;
    width: 110px;
    height: 120px;
}

.unified .wizard-step-wrapper {
  height: 96px;
}

.wizard-step-wrapper:hover > * {
    cursor: pointer;
    color: #090;
    border-color: #090 !important;
    
}
.wizard-step-wrapper:hover .wizard-step {
    background-color: #090;
    color: #EEE !important;
    position: relative;
    z-index: 3;
}

.wizard-step-text {
    display: inline-block;
    width: 110px;
    height: 40px;
    font-size: 12px;
    line-height: 18px;
    margin-left: 9px;
    text-align: center;
    z-index: 4;
    position: relative;
}

.unified .wizard-step-text {
  margin-left: -10px;
  margin-top: -3px;
  height: 16px;
  border-radius: 5px;
  border: 2px solid #666;
  background: #FFF;
  height: 20px;
}

.unified .wizard-step-text .done {
 color: #F00;
}

.wizard-step.active {
    color: #EEE;
    background: #369;
    border-color: #369;
}

.wizard-line {
    border-top: 3px solid #666;
    width: 48px;
    display: inline-block;
    height: 88px;
    margin-bottom: -40px;
    margin-left: -14px;
    margin-right: -32px;
    z-index: 0;
    position: relative;
}

.unified .wizard-line {
    border: none;
    border-right: 3px solid #666;
    width: 48px;
    display: inline-block;
    margin-top: -24px;
    margin-left: 4px;
    height: 48px;
    z-index: 0;
    position: absolute;
}


.done {
    color: #9BE !important;
    border-color: #9BE !important;
}



#unified-steps {
    width: 120px;
    border: 1.5px solid #3339;
    background: #EEE;
    border-radius: 10px;
    margin: 10px auto;
    padding: 10px;
    height: 600px;
    text-align: center;
    display: inline-block;
    float: left;
}

#wizard-content {
    width: 720px;
    border: 1.5px solid #3339;
    background: #FFE;
    border-radius: 10px;
    margin: 10px auto;
    padding: 10px;
    min-height: 480px;
    font-size: 0.85rem;
}

.wizard-tip {
    width: 720px;
    border: 1.5px solid #3339;
    background: #FEF;
    border-radius: 10px;
    margin: 10px auto;
    padding: 10px;
    font-size: 0.85rem;
}

#step_text {
    margin-bottom: 10px !important;
}

.btn-sm {
  padding: 0px 3px 0px 3px !important;
  line-height: 1.25 !important;
}

.loader,
.loader:before,
.loader:after {
  background: #000d50;
  -webkit-animation: load1 1s infinite ease-in-out;
  animation: load1 1s infinite ease-in-out;
  width: 1em;
  height: 4em;
}
.loader {
  color: #000d50;
  text-indent: -9999em;
  margin: 88px auto;
  position: relative;
  font-size: 11px;
  -webkit-transform: translateZ(0);
  -ms-transform: translateZ(0);
  transform: translateZ(0);
  -webkit-animation-delay: -0.16s;
  animation-delay: -0.16s;
}
.loader:before,
.loader:after {
  position: absolute;
  top: 0;
  content: '';
}
.loader:before {
  left: -1.5em;
  -webkit-animation-delay: -0.32s;
  animation-delay: -0.32s;
}
.loader:after {
  left: 1.5em;
}
@-webkit-keyframes load1 {
  0%,
  80%,
  100% {
    box-shadow: 0 0;
    height: 4em;
  }
  40% {
    box-shadow: 0 -2em;
    height: 5em;
  }
}
@keyframes load1 {
  0%,
  80%,
  100% {
    box-shadow: 0 0;
    height: 4em;
  }
  40% {
    box-shadow: 0 -2em;
    height: 5em;
  }
}


 .fade {
   opacity: 1;
   -webkit-transition: opacity 0.01s linear !important;
      -moz-transition: opacity 0.01s linear !important;
       -ms-transition: opacity 0.01s linear !important;
        -o-transition: opacity 0.01s linear !important;
           transition: opacity 0.01s linear !important;
 }
 
 
.unified textarea {
 font-family: monospace;
 font-size: 12px;
}

#unified-editor {
 display: none;
}

.unified #unified-editor {
  display: inline-block;
  width: 560px;
  height: 620px;
  float: left;
  margin: 16px;
  
}

#unified-helper {
  display: inline-block;
  width: 400px;
  height: 600px;
  float: left;
  margin: 10px;
  border: 2px solid #666;
  background: #FFE;
  border-radius: 10px;
  font-size: 0.9rem;
  padding: 4px;
  overflow-y: auto;
  font-weight: 380;
  font-family: roboto, montserrat, sans-serif;
  line-height: 1.1rem;
}

#unified-helper ul {
 font-size: 0.8rem;
}

#unified-helper > h5 {
 font-size: 1rem !important;
}

#unified-helper > h6 {
 font-size: 0.9rem !important;
}

#unified-reflow {
 width: 540px;
 height: 20px;
 font-size: 11px;
 
}


#unified-report {
 width: 540px;
 height: 570px;
 font-size: 11px;
}

.unified #tips {
 display: none !important;
}

.unified #wizard-content {
 display: none;
}


@-moz-document url-prefix() {
    .unified .wizard-line {
        margin-left: -106px;
        margin-top: 50px;
    }
}

